--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^1.5.2"
 jupyter = "^1.0.0"
 sklearn = "^0.0.post1"
 seaborn = "^0.12.1"
+scikit-learn = "^1.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
